axum-macros/tests/debug_middleware/fail/takes_next_twice.stderr
error: Middleware functions can only take one argument of type `axum::middleware::Next`
 --> tests/debug_middleware/fail/takes_next_twice.rs:3:1
  |
3 | #[debug_middleware]
  | ^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `debug_middleware` (in Nightly builds, run with -Z macro-backtrace for more info)
